k3s/infra/valkey/valkey-admin-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: valkey-admin-app
  namespace: valkey
spec:
  replicas: 1
  selector:
    matchLabels:
      app: valkey-admin-app
  template:
    metadata:
      labels:
        app: valkey-admin-app
    spec:
      containers:
        - name: app
          image: valkey/valkey-admin:1.0.1
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 250m
              memory: 64Mi
            limits:
              cpu: 1000m
              memory: 2Gi
          ports:
            - containerPort: 8080
              name: http
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 15
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: valkey-admin-app
  namespace: valkey
spec:
  selector:
    app: valkey-admin-app
  ports:
    - name: http
      port: 8080
      targetPort: http
