k3s/infra/valkey/valkey-admin-ingress.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: valkey-admin-ingress
  namespace: valkey
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`valkey.k3s.hackbox.cc`)
    kind: Rule
    services:
    - name: valkey-admin-app
      kind: Service
      port: 8080
      namespace: valkey
  tls: {} # use TLS store default certificate
